cleaned up dir setting on start-onos.sh and Changed Java VM params (decreased memory from 2G -> 1G and Change GC from ParallelGC to ConcMarkSweepGC